# aitiguru

./: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5924511f8592_create_orders_and_payments.py  8941854978bb_.py  a6165781740d_.py  d8d4c5952cd6_.py  de556c2a36d4_.py
src/: main.py  settings.py
src/api/: dependencies.py
src/api/routers/: orders.py  payments.py
src/db/: base.py  columns.py  session.py  uow.py
src/domain/: constants.py  enums.py  exceptions.py
src/integrations/bank/: client.py  schemas.py
src/models/: order.py  payment.py
src/repos/: order.py  payment.py
src/schemas/: order.py  payment.py
src/services/: orders.py  payments.py
